{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 117,
  "lineage": "4518547b-764d-019d-c79e-dfb96c31bbd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c041ba82eda030c9",
            "arn": "arn:aws:ec2:us-east-1:738408429981:elastic-ip/eipalloc-0c041ba82eda030c9",
            "domain": "vpc",
            "id": "eipalloc-0c041ba82eda030c9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-205-237.compute-1.amazonaws.com",
            "public_ip": "18.209.205.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "capstone-eip-1a"
            },
            "tags_all": {
              "Name": "capstone-eip-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f6bf5872f4b985d",
            "arn": "arn:aws:ec2:us-east-1:738408429981:elastic-ip/eipalloc-04f6bf5872f4b985d",
            "domain": "vpc",
            "id": "eipalloc-04f6bf5872f4b985d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-197-188-125.compute-1.amazonaws.com",
            "public_ip": "34.197.188.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "capstone-eip-1b"
            },
            "tags_all": {
              "Name": "capstone-eip-1b"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:internet-gateway/igw-040082454783b7102",
            "id": "igw-040082454783b7102",
            "owner_id": "738408429981",
            "tags": {
              "Name": "capstone-igw"
            },
            "tags_all": {
              "Name": "capstone-igw"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c041ba82eda030c9",
            "association_id": "eipassoc-0749bd557cc7f9926",
            "connectivity_type": "public",
            "id": "nat-0d7de6fe6fede4600",
            "network_interface_id": "eni-025aa560832ae9e41",
            "private_ip": "10.0.1.249",
            "public_ip": "18.209.205.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02634f8e5436616f7",
            "tags": {
              "Name": "capstone-nat-1a"
            },
            "tags_all": {
              "Name": "capstone-nat-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f6bf5872f4b985d",
            "association_id": "eipassoc-0a42e8603ae722b04",
            "connectivity_type": "public",
            "id": "nat-0673c308d6cdaf396",
            "network_interface_id": "eni-0172e1f08f2d4f242",
            "private_ip": "10.0.2.26",
            "public_ip": "34.197.188.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09723a8c0c1659d09",
            "tags": {
              "Name": "capstone-nat-1b"
            },
            "tags_all": {
              "Name": "capstone-nat-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:route-table/rtb-0edeb35b9f6529fc3",
            "id": "rtb-0edeb35b9f6529fc3",
            "owner_id": "738408429981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d7de6fe6fede4600",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-route-table-1a"
            },
            "tags_all": {
              "Name": "private-app-route-table-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:route-table/rtb-0c2e6ec4b29c1418e",
            "id": "rtb-0c2e6ec4b29c1418e",
            "owner_id": "738408429981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0673c308d6cdaf396",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-app-route-table-1b"
            },
            "tags_all": {
              "Name": "private-app-route-table-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:route-table/rtb-0996ebc35a4727919",
            "id": "rtb-0996ebc35a4727919",
            "owner_id": "738408429981",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040082454783b7102",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092ac81f43b49b67e",
            "route_table_id": "rtb-0edeb35b9f6529fc3",
            "subnet_id": "subnet-0b3fa8bfc5d0726a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_app_1",
            "aws_subnet.private_app_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04569f81d2f4be84c",
            "route_table_id": "rtb-0c2e6ec4b29c1418e",
            "subnet_id": "subnet-031ac0984581f8dcf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_app_2",
            "aws_subnet.private_app_2",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0942fa9b9af5e910d",
            "route_table_id": "rtb-0996ebc35a4727919",
            "subnet_id": "subnet-02634f8e5436616f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062e5c7d51a915087",
            "route_table_id": "rtb-0996ebc35a4727919",
            "subnet_id": "subnet-09723a8c0c1659d09"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:security-group/sg-0a5ef4b211bf6166f",
            "description": "Allow MySQL inbound traffic from within the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5ef4b211bf6166f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MySQL traffic from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "capstone-rds-sg",
            "name_prefix": "",
            "owner_id": "738408429981",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-rds-sg"
            },
            "tags_all": {
              "Name": "capstone-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:subnet/subnet-0b3fa8bfc5d0726a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3fa8bfc5d0726a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738408429981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-1a",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-app-subnet-1a",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:subnet/subnet-031ac0984581f8dcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031ac0984581f8dcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738408429981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-app-subnet-1b",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-app-subnet-1b",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:subnet/subnet-0d0348b90fdbd97a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0348b90fdbd97a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738408429981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-subnet-1a"
            },
            "tags_all": {
              "Name": "private-db-subnet-1a"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:subnet/subnet-084bf5ff78c56c677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084bf5ff78c56c677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "738408429981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-db-subnet-1b"
            },
            "tags_all": {
              "Name": "private-db-subnet-1b"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:subnet/subnet-02634f8e5436616f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02634f8e5436616f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738408429981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1a",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:subnet/subnet-09723a8c0c1659d09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09723a8c0c1659d09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "738408429981",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1b",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1b",
              "kubernetes.io/cluster/capstone-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0e111878ebac1d019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:738408429981:vpc/vpc-0e111878ebac1d019",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05e95cf4ed19b2dd9",
            "default_route_table_id": "rtb-033e00721a1920c8d",
            "default_security_group_id": "sg-0ef332822c1add857",
            "dhcp_options_id": "dopt-0baa95f09ba4f8787",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e111878ebac1d019",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-033e00721a1920c8d",
            "owner_id": "738408429981",
            "tags": {
              "Name": "digitalwitch-capstone-vpc",
              "Project": "Digital Witch DevOps Capstone",
              "kubernetes.io/cluster/capstone-cluster": "shared"
            },
            "tags_all": {
              "Name": "digitalwitch-capstone-vpc",
              "Project": "Digital Witch DevOps Capstone",
              "kubernetes.io/cluster/capstone-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}